--- a/app/src/main/res/layout/fragment_placement_detail.xml
+++ b/app/src/main/res/layout/fragment_placement_detail.xml
@@ -56,7 +56,8 @@
 
                 <eryaz.software.carParts.util.widgets.TextInputLayout
                     android:id="@+id/search_product_barcode_placement"
-                    style="@style/Widget.Zeus.SearchInput"    android:layout_width="match_parent"
+                    style="@style/Widget.Zeus.SearchInput"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="12dp"
@@ -199,16 +200,41 @@
                         android:id="@+id/suggestionShelfRecycleView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
                         android:layout_marginTop="15dp"
                         android:layout_weight="2"
-                        android:layout_marginHorizontal="16dp"
                         app:itemDecoration="@{5}"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        app:layout_constraintBottom_toTopOf="@id/controlBtn"
+                        app:layout_constraintBottom_toTopOf="@id/noteTill"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/shelfAddress"
                         tools:itemCount="2" />
+
+                    <eryaz.software.carParts.util.widgets.TextInputLayout
+                        android:id="@+id/noteTill"
+                        style="@style/Widget.Zeus.SearchInput"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginTop="12dp"
+                        android:elevation="10dp"
+                        android:hint="Menşei"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/suggestionShelfRecycleView">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/noteEdt"
+                            style="@style/Widget.Zeus.SearchInput"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:imeOptions="actionDone"
+                            android:inputType="text"
+                            android:text="@={placementViewModel.note}"
+                            android:textColorHint="@color/logoGray"
+                            android:textSize="18sp"
+                            app:fontFamily="@font/sogeoui" />
+                    </eryaz.software.carParts.util.widgets.TextInputLayout>
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/controlBtn"
@@ -222,7 +248,7 @@
                         android:textSize="20sp"
                         app:fontFamily="@font/sogeoui"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/suggestionShelfRecycleView"
+                        app:layout_constraintTop_toBottomOf="@+id/noteTill"
                         app:layout_goneMarginTop="@dimen/_10sdp" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
