--- a/app/src/main/res/layout/fragment_placement_list.xml
+++ b/app/src/main/res/layout/fragment_placement_list.xml
@@ -71,8 +71,10 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/search_product_barcode"
+                app:layout_constraintVertical_bias="0.333"
                 tools:itemCount="6"
                 tools:listitem="@layout/item_work_activity_list" />
 
