--- a/app/src/main/res/layout/fragment_control_point_detail.xml
+++ b/app/src/main/res/layout/fragment_control_point_detail.xml
@@ -70,11 +70,11 @@
                     android:id="@+id/packageSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:padding="8dp"
-                    app:isVisibleElseGone="@{viewModel.showSpinnerList}"
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginVertical="12dp"
                     android:gravity="center"
+                    android:padding="8dp"
+                    app:isVisibleElseGone="@{viewModel.showSpinnerList}"
                     app:layout_constraintTop_toBottomOf="@id/searchProductTill" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -131,13 +131,63 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/packageTill" />
 
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/controlPointTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="10dp"
+                    android:drawablePadding="2dp"
+                    app:isVisibleElseGone="@{viewModel.showProductControl}"
+                    android:ellipsize="marquee"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:maxLines="1"
+                    android:minHeight="32dp"
+                    android:layout_margin="24dp"
+                    android:padding="0dp"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:text="Kontrol edilecek adet:"
+                    android:textColor="#2C2C2C"
+                    android:textSize="22sp"
+                    app:fontFamily="@font/sogeoui"
+                    app:layout_constraintEnd_toStartOf="@id/controlPointQuantity"
+                    app:layout_constraintTop_toBottomOf="@id/productDescription" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/controlPointQuantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="10dp"
+                    app:isVisibleElseGone="@{viewModel.showProductControl}"
+                    android:drawablePadding="2dp"
+                    android:ellipsize="marquee"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:maxLines="1"
+                    android:layout_margin="24dp"
+                    android:minHeight="32dp"
+                    android:padding="0dp"
+                    android:text="@{viewModel.willControlled}"
+                    android:layout_marginVertical="12dp"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:textColor="#2C2C2C"
+                    android:textSize="22sp"
+                    app:fontFamily="@font/sogeoui"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/productDescription"
+                    tools:text="15" />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/itemGroup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:animateLayoutChanges="@{true}"
                     android:paddingTop="12dp"
-                    app:layout_constraintTop_toBottomOf="@id/productDescription">
+                    app:animateLayoutChanges="@{true}"
+                    app:layout_constraintTop_toBottomOf="@id/controlPointTxt">
 
                     <eryaz.software.carParts.util.widgets.TextInputLayout
                         android:id="@+id/quantityTill"
@@ -168,11 +218,11 @@
                         android:id="@+id/checkBox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:minHeight="0dp"
                         android:layout_marginTop="16dp"
-                        android:text="@string/quick_control"
+                        android:layout_marginEnd="16dp"
                         android:checked="@={viewModel.serialCheckBox}"
+                        android:minHeight="0dp"
+                        android:text="@string/quick_control"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/quantityTill"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -185,8 +235,8 @@
                         android:layout_marginHorizontal="16dp"
                         android:layout_marginTop="24dp"
                         android:layout_marginBottom="@dimen/_10sdp"
-                        android:text="@string/control"
                         android:enabled="@{viewModel.controlEnableBtn}"
+                        android:text="@string/control"
                         android:textSize="20sp"
                         app:fontFamily="@font/sogeoui"
                         app:isVisibleElseGone="@{!viewModel.serialCheckBox}"
@@ -235,6 +285,7 @@
                         app:layout_constraintHorizontal_weight="1"
                         app:layout_constraintStart_toEndOf="@id/productName"
                         app:layout_constraintTop_toTopOf="parent" />
+
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/collectedQuantityTxt"
