--- a/app/src/main/res/layout/fragment_query_storage.xml
+++ b/app/src/main/res/layout/fragment_query_storage.xml
@@ -249,6 +249,83 @@
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </com.google.android.material.card.MaterialCardView>
 
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/controlPointId"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginTop="@dimen/_13sdp"
+                        android:layout_marginBottom="16dp"
+                        app:cardBackgroundColor="?colorSurface"
+                        app:cardCornerRadius="24dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/cardShelf"
+                        app:layout_constraintVertical_bias="0">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/sectionControlPoint"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/sogeoui"
+                                android:paddingVertical="@dimen/_13sdp"
+                                android:paddingStart="@dimen/_13sdp"
+                                android:paddingEnd="@dimen/_6sdp"
+                                android:text="Kontrol Noktası"
+                                android:textColor="@color/black"
+                                android:textSize="16sp"
+                                app:layout_constraintEnd_toStartOf="@id/controlQuantity"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <View
+                                android:layout_width="1dp"
+                                android:layout_height="0dp"
+                                android:background="@color/gray_f6"
+                                app:layout_constraintBottom_toBottomOf="@id/sectionControlPoint"
+                                app:layout_constraintStart_toEndOf="@id/sectionControlPoint"
+                                app:layout_constraintTop_toTopOf="@id/sectionControlPoint" />
+
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/controlQuantity"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/sogeoui"
+                                android:gravity="end"
+                                android:paddingVertical="@dimen/_13sdp"
+                                android:paddingStart="@dimen/_6sdp"
+                                android:paddingEnd="@dimen/_13sdp"
+                                android:text="@string/qty_big"
+                                android:textColor="@color/black"
+                                android:textSize="16sp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toEndOf="@id/sectionControlPoint"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:background="@color/gray_f6"
+                                app:layout_constraintTop_toBottomOf="@id/sectionControlPoint" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/controlPointRecyclerView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="2"
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                app:layout_constrainedHeight="true"
+                                app:layout_constraintTop_toBottomOf="@+id/sectionControlPoint"
+                                app:layout_constraintVertical_bias="0"
+                                tools:itemCount="2"
+                                tools:listitem="@layout/item_storage_quantity_text" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </com.google.android.material.card.MaterialCardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
