--- a/app/src/main/res/layout/fragment_recording_barcode.xml
+++ b/app/src/main/res/layout/fragment_recording_barcode.xml
@@ -128,6 +128,7 @@
                         android:layout_marginTop="12dp"
                         android:elevation="10dp"
                         android:hint="@string/qty"
+                        android:enabled="false"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/productBarcodeLyt">
 
