--- a/app/src/main/res/menu/placement_menu.xml
+++ b/app/src/main/res/menu/placement_menu.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/refresh"
+        android:orderInCategory="2"
+        android:title="@string/menu_refresh"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/menu_list_detail"
         android:orderInCategory="2"
         android:title="@string/menu_list_detail"
